large sliding door port